--- a/workflows/run.yml
+++ b/workflows/run.yml
@@ -1,18 +1,15 @@
-name: Shana Tender Bot
+name: Test Shana Bot
 
 on:
-  schedule:
-    - cron: "30 18 * * *"   # هر شب ساعت 22:00 به وقت ایران
-  workflow_dispatch:       # امکان اجرا دستی
+  workflow_dispatch:   # اجرا دستی فقط
 
 jobs:
-  run:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install -r requirements.txt
-      - run: playwright install chromium
-      - run: python scraper.py
+      - run: pip install requests
+      - run: python test_bot.py
