--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,18 +1,21 @@
-name: Shana Tender Bot
+name: Test Telegram Bot
 
 on:
-  schedule:
-    - cron: "30 18 * * *"   # هر شب ساعت 22:00 به وقت ایران
-  workflow_dispatch:       # امکان اجرا دستی
+  workflow_dispatch:   # اجرا دستی فقط
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install -r requirements.txt
-      - run: playwright install chromium
-      - run: python scraper.py
+
+      # نصب کتابخانه requests
+      - run: pip install requests
+
+      # اجرای فایل تست
+      - name: Run test bot
+        run: python test_bot.py
